--- a/projects/settings/src/lib/roles/form/form.component.html
+++ b/projects/settings/src/lib/roles/form/form.component.html
@@ -5,27 +5,12 @@
       nzHasFeedback
       [nzAutoTips]="{
         default: {
-          required: '权限名称不能为空'
+          required: '权限名称不能为空',
+          duplicated: '存在重复的定义，权限名称必须是唯一的'
         }
       }"
     >
       <input nz-input type="text" formControlName="name" placeholder="请填写权限名称" />
-    </nz-form-control>
-  </nz-form-item>
-
-  <nz-form-item>
-    <nz-form-label nzRequired>权限标识</nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      [nzAutoTips]="{
-        default: {
-          required: '权限标识不能为空',
-          pattern: '请使用小写字母与下划线的组合',
-          duplicated: '存在重复的定义，权限标识必须是唯一的'
-        }
-      }"
-    >
-      <input nz-input formControlName="key" placeholder="请填写权限标识" />
     </nz-form-control>
   </nz-form-item>
 
@@ -37,27 +22,26 @@
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label>标签</nz-form-label>
+    <nz-form-label>标记</nz-form-label>
     <nz-form-control formArrayName="labels">
       <ng-container *ngFor="let x of labels?.controls; index as i; first as isFirst">
-        <nz-input-group nzCompact [formGroupName]="i" [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
-          <input style="width: 45%" type="text" nz-input formControlName="label" placeholder="标签名称" />
-          <input style="width: 45%" type="text" nz-input formControlName="value" placeholder="标签值" />
-          <button nz-button nzType="default" style="width: 10%" (click)="removeLabel(i)">
+        <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
+          <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="请输入标记名称" />
+          <button nz-button type="button" nzType="default" style="width: 10%" (click)="removeLabel(i)">
             <i nz-icon nzType="minus-circle"></i>
           </button>
         </nz-input-group>
       </ng-container>
       <nz-button-group style="width: 100%; margin-top: 8px">
         <button style="width: 90%" type="button" nz-button nzType="dashed" (click)="addLabel()">
-          <i nz-icon nzType="plus-circle"></i> 新增标签
+          <i nz-icon nzType="plus-circle"></i> 新增标记
         </button>
         <button
           style="width: 10%"
           type="button"
           nz-button
           nzType="dashed"
-          nz-tooltip="导入标签"
+          nz-tooltip="导入标记"
           (click)="importLabels()"
         >
           <i nz-icon nzType="import"></i>
