--- a/projects/settings/src/lib/roles/permission/permission.component.html
+++ b/projects/settings/src/lib/roles/permission/permission.component.html
@@ -33,6 +33,6 @@
 <ng-template #readonly>只读</ng-template>
 
 <div *nzModalFooter>
-  <button nz-button nzType="default" (click)="close()">取消</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
   <button nz-button nzType="primary" (click)="submit()">提交</button>
 </div>
