--- a/projects/settings/src/lib/roles/roles.component.html
+++ b/projects/settings/src/lib/roles/roles.component.html
@@ -105,4 +105,6 @@
   </nz-list>
 </div>
 
-<ng-template #empty>无</ng-template>
+<ng-template #empty>
+  <nz-tag style="margin-bottom: 4px">无</nz-tag>
+</ng-template>
