--- a/projects/settings/src/lib/roles/form/form.component.html
+++ b/projects/settings/src/lib/roles/form/form.component.html
@@ -59,6 +59,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button nzType="default" (click)="close()">取消</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
   <button nz-button nzType="primary" form="form" [disabled]="!form?.valid">提交</button>
 </div>
