--- a/projects/settings/src/lib/users/form/form.component.html
+++ b/projects/settings/src/lib/users/form/form.component.html
@@ -111,22 +111,20 @@
       </button>
     </nz-form-control>
   </nz-form-item>
-
   <nz-form-item>
     <nz-form-label>标签</nz-form-label>
     <nz-form-control formArrayName="labels">
       <ng-container *ngFor="let x of labels?.controls; index as i; first as isFirst">
-        <nz-input-group nzCompact [formGroupName]="i" [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
-          <input style="width: 45%" type="text" nz-input formControlName="label" placeholder="标签名称" />
-          <input style="width: 45%" type="text" nz-input formControlName="value" placeholder="标签值" />
-          <button nz-button nzType="default" style="width: 10%" (click)="removeLabel(i)">
+        <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
+          <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="请输入标记名称" />
+          <button nz-button type="button" nzType="default" style="width: 10%" (click)="removeLabel(i)">
             <i nz-icon nzType="minus-circle"></i>
           </button>
         </nz-input-group>
       </ng-container>
       <nz-button-group style="width: 100%; margin-top: 8px">
         <button style="width: 90%" type="button" nz-button nzType="dashed" (click)="addLabel()">
-          <i nz-icon nzType="plus-circle"></i> 新增标签
+          <i nz-icon nzType="plus-circle"></i> 新增标记
         </button>
         <button
           style="width: 10%"
@@ -151,6 +149,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button nzType="default" (click)="close()">取消</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
   <button nz-button nzType="primary" form="form" [disabled]="!form?.valid">提交</button>
 </div>
