--- a/projects/resources/src/lib/resources.component.html
+++ b/projects/resources/src/lib/resources.component.html
@@ -3,17 +3,16 @@
   <nz-layout class="content">
     <nz-sider nzTheme="light" [nzWidth]="240">
       <ul nz-menu nzMode="inline">
-        <li nz-menu-group nzTitle="多媒体资源">
+        <li nz-menu-group nzTitle="媒体资源">
           <ul>
-            <li nz-menu-item> <span>图库</span> </li>
-            <li nz-menu-item> <span>视频</span> </li>
-            <li nz-menu-item> <span>音频</span> </li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['pictures']"> <span>图库</span> </li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['videos']"> <span>视频</span> </li>
           </ul>
         </li>
       </ul>
     </nz-sider>
     <nz-layout style="overflow: auto">
-      <wpx-page-header></wpx-page-header>
+      <wpx-page-header [wpxManual]="true"> </wpx-page-header>
       <nz-content>
         <router-outlet></router-outlet>
       </nz-content>
