--- a/src/app/example/orders/orders.component.html
+++ b/src/app/example/orders/orders.component.html
@@ -1,4 +1,4 @@
-<wpx-layout wpxTitle="表格"></wpx-layout>
+<wpx-layout wpxTitle="动态表格"></wpx-layout>
 
 <nz-card [nzTitle]="table.wpxSearch" [nzExtra]="table.wpxTool">
   <wpx-table #table wpxKey="ex_orders" [wpxApi]="orders" [wpxFields]="fields"></wpx-table>
