--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -4,7 +4,12 @@
   <nz-layout class="content">
     <nz-sider nzTheme="light" [nzWidth]="240">
       <ul nz-menu nzMode="inline">
-        <li nz-menu-item nzMatchRouter [routerLink]="['orders']"> <i nz-icon nzType="table"></i> <span>表格</span> </li>
+        <li nz-menu-item nzMatchRouter [routerLink]="['media']">
+          <i nz-icon nzType="experiment"></i> <span>媒体表单</span>
+        </li>
+        <li nz-menu-item nzMatchRouter [routerLink]="['orders']">
+          <i nz-icon nzType="experiment"></i> <span>动态表格</span>
+        </li>
       </ul>
     </nz-sider>
     <nz-layout style="overflow: auto">
