--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,12 @@ nz-sider {
 nz-content {
   padding: 12px;
 }
+
+.upload-avatar {
+  width: 128px;
+  height: 128px;
+
+  img {
+    width: 100%;
+  }
+}
