--- a/src/app/example/media/media.component.html
+++ b/src/app/example/media/media.component.html
@@ -1,5 +1,34 @@
 <wpx-layout wpxTitle="媒体表单">
-  <wpx-transport *wpxLayoutAction></wpx-transport>
+  <!--  <wpx-transport *wpxLayoutAction></wpx-transport>-->
 </wpx-layout>
 
-<nz-card> </nz-card>
+<nz-card>
+  <form nz-form nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
+    <nz-form-item>
+      <nz-form-label nzRequired>图片上传</nz-form-label>
+      <nz-form-control>
+        <nz-upload
+          class="upload-avatar"
+          wpxUpload
+          formControlName="avatar"
+          nzName="file"
+          nzListType="picture-card"
+          (nzChange)="upload($event)"
+        >
+          <ng-container *ngIf="!avatar; else exists">
+            <i nz-icon nzType="plus"></i>
+            <div class="ant-upload-text">上传</div>
+          </ng-container>
+          <ng-template #exists>
+            <img [wpxAssets]="[avatar]" alt="" />
+          </ng-template>
+        </nz-upload>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-control>
+        <button nz-button nzType="primary" [disabled]="!form?.valid">提交</button>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
+</nz-card>
