--- a/src/app/example/media/media.component.html
+++ b/src/app/example/media/media.component.html
@@ -1,5 +1,5 @@
 <wpx-layout wpxTitle="媒体表单">
-  <!--  <wpx-transport *wpxLayoutAction></wpx-transport>-->
+  <wpx-upload-transport *wpxLayoutAction></wpx-upload-transport>
 </wpx-layout>
 
 <nz-card>
@@ -7,22 +7,22 @@
     <nz-form-item>
       <nz-form-label nzRequired>图片上传</nz-form-label>
       <nz-form-control>
-        <nz-upload
-          class="upload-avatar"
-          wpxUpload
-          formControlName="avatar"
-          nzName="file"
-          nzListType="picture-card"
-          (nzChange)="upload($event)"
-        >
-          <ng-container *ngIf="!avatar; else exists">
-            <i nz-icon nzType="plus"></i>
-            <div class="ant-upload-text">上传</div>
-          </ng-container>
-          <ng-template #exists>
-            <img [wpxAssets]="[avatar]" alt="" />
-          </ng-template>
-        </nz-upload>
+        <!--        <nz-upload-->
+        <!--          class="upload-avatar"-->
+        <!--          wpxUpload-->
+        <!--          formControlName="avatar"-->
+        <!--          nzListType="picture-card"-->
+        <!--          (nzChange)="upload($event)"-->
+        <!--        >-->
+        <!--          <ng-container *ngIf="!avatar; else exists">-->
+        <!--            <i nz-icon nzType="plus"></i>-->
+        <!--            <div class="ant-upload-text">上传</div>-->
+        <!--          </ng-container>-->
+        <!--          <ng-template #exists>-->
+        <!--            <img [wpxAssets]="[avatar]" alt="" />-->
+        <!--          </ng-template>-->
+        <!--        </nz-upload>-->
+        <wpx-upload-avatar formControlName="avatar"> </wpx-upload-avatar>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
