--- a/projects/components/upload/avatar/avatar.component.html
+++ b/projects/components/upload/avatar/avatar.component.html
@@ -1,6 +1,6 @@
 <nz-upload class="upload" wpxUpload nzListType="picture-card" (nzChange)="change($event)">
   <ng-container *ngIf="!!value; else uploadBtn">
-    <img [wpxAssets]="[value]" alt="" />
+    <img [src]="[value] | wpxAssets" alt="" />
   </ng-container>
   <ng-template #uploadBtn>
     <i nz-icon [nzType]="!loading ? 'plus' : 'loading'"></i>
