--- a/projects/components/media/media.component.scss
+++ b/projects/components/media/media.component.scss
@@ -1,36 +1,36 @@
-:host ::ng-deep {
-  .ant-card-meta-title {
-    font-size: 14px;
-  }
+//:host ::ng-deep {
+//  .ant-card-meta-title {
+//    font-size: 14px;
+//  }
+//
+//  .ant-card-actions > li {
+//    margin: 6px 0;
+//  }
+//
+//  .ant-checkbox-wrapper {
+//    width: 100%;
+//    overflow: hidden;
+//    white-space: nowrap;
+//    text-overflow: ellipsis;
+//  }
+//
+//  .cdk-drag-preview {
+//    display: table;
+//  }
+//
+//  .cdk-drag-placeholder {
+//    opacity: 0;
+//  }
+//}
 
-  .ant-card-actions > li {
-    margin: 6px 0;
-  }
-
-  .ant-checkbox-wrapper {
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-
-  .cdk-drag-preview {
-    display: table;
-  }
-
-  .cdk-drag-placeholder {
-    opacity: 0;
-  }
-}
-
-.custom-badge {
-  float: right;
-  margin-top: 0.5px;
-}
-
-.drag-cursor {
-  cursor: move;
-}
+//.custom-badge {
+//  float: right;
+//  margin-top: 0.5px;
+//}
+//
+//.drag-cursor {
+//  cursor: move;
+//}
 
 .infinite-container {
   height: 720px;
@@ -38,35 +38,49 @@
   overflow-x: hidden;
 }
 
-.thumb {
-  height: 135px;
+.photo {
+  height: 200px;
   width: 100%;
-  background-size: contain;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
   overflow: hidden;
-  position: relative;
 
-  .thumb-actions {
-    pointer-events: none;
-    position: absolute;
+  img {
+    max-width: 120%;
+    position: relative;
     top: 50%;
-    width: 100%;
-    height: 32px;
-    margin-top: -16px;
-    text-align: center;
-    z-index: 1;
-    color: #fff;
-    font-size: 32px;
-    opacity: 0;
-  }
-
-  &:hover {
-    .thumb-actions {
-      opacity: 0.8;
-    }
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
+
+//.thumb {
+//  height: 135px;
+//  width: 100%;
+//  background-size: contain;
+//  background-position: 50% 50%;
+//  background-repeat: no-repeat;
+//  overflow: hidden;
+//  position: relative;
+//
+//  .thumb-actions {
+//    pointer-events: none;
+//    position: absolute;
+//    top: 50%;
+//    width: 100%;
+//    height: 32px;
+//    margin-top: -16px;
+//    text-align: center;
+//    z-index: 1;
+//    color: #fff;
+//    font-size: 32px;
+//    opacity: 0;
+//  }
+//
+//  &:hover {
+//    .thumb-actions {
+//      opacity: 0.8;
+//    }
+//  }
+//}
 
 .video,
 .audio {
