--- a/projects/components/media/media.component.html
+++ b/projects/components/media/media.component.html
@@ -1,47 +1,43 @@
-<cdk-virtual-scroll-viewport class="infinite-container" itemSize="231.5">
+<cdk-virtual-scroll-viewport class="infinite-container" itemSize="363">
   <nz-list nzGrid nzItemLayout="vertical">
-    <nz-list-item *cdkVirtualFor="let items of ds">
+    <nz-list-item *cdkVirtualFor="let item of ds">
       <nz-row style="width: 100%" [nzGutter]="8">
-        <div *ngFor="let item of items" nz-col [nzSpan]="6">
-          <nz-card nzHoverable [nzCover]="coverRef" [nzActions]="[copyRef, renameRef, moreRef]">
+        <div *ngFor="let x of item" nz-col [nzSpan]="24 / ds.itemSize">
+          <nz-card nzHoverable [nzCover]="coverRef" [nzActions]="[tagsRef, editRef, deleteRef]">
             <ng-template #coverRef>
-              <div class="photo">
+              <div class="photo" (click)="preview(x)">
                 <img
                   nz-image
-                  [nzSrc]="[item.url] | wpxAssets: { compress: true }"
-                  [nzPlaceholder]="[item.url] | wpxAssets: { thumbnail: true }"
-                  [alt]="item.name"
+                  nzDisablePreview
+                  [nzSrc]="[x.url, 'thumbnail'] | wpxAssets"
+                  [nzPlaceholder]="[x.url, 'placeholder'] | wpxAssets"
+                  [nzFallback]="[fallback!] | wpxAssets"
+                  [alt]="x.name"
                 />
               </div>
             </ng-template>
             <nz-card-meta style="height: 50px" [nzDescription]="descriptionRef">
               <ng-template #descriptionRef>
-                <label nz-checkbox [(ngModel)]="item.checked">
-                  {{ item.name | nzEllipsis: 30:'...' }}
-                  <i nz-icon nzType="info-circle" [nz-tooltip]="item.name"></i>
+                <label nz-checkbox [(ngModel)]="x.checked">
+                  {{ x.name | nzEllipsis: 30:'...' }}
+                  <a [nz-tooltip]="info" [nzTooltipMouseEnterDelay]="0.2">
+                    <i nz-icon nzType="link"></i>
+                  </a>
+                  <ng-template #info>
+                    <p>名称：{{ x.name }}</p>
+                    <p>地址：{{ [x.url] | wpxAssets }}</p>
+                  </ng-template>
                 </label>
               </ng-template>
             </nz-card-meta>
-            <ng-template #copyRef>
-              <i nz-icon nzType="copy" [nz-tooltip]="[item.url] | wpxAssets"></i>
+            <ng-template #tagsRef>
+              <i nz-icon nzType="tags" nz-tooltip="标签"></i>
             </ng-template>
-            <ng-template #renameRef>
+            <ng-template #editRef>
               <i nz-icon nzType="edit" nz-tooltip="编辑"></i>
             </ng-template>
-            <ng-template #moreRef>
-              <i nz-icon nzType="ellipsis"></i>
-              <!--              <nz-dropdown-menu #actionMenu>-->
-              <!--                <ul nz-menu>-->
-              <!--                  <li nz-menu-item (click)="openMoveModal([item])">-->
-              <!--                    <i nz-icon nzType="swap"></i>-->
-              <!--                    {{ bit.l['move'] }}-->
-              <!--                  </li>-->
-              <!--                  <li nz-menu-item (click)="openDeleteModal([item])">-->
-              <!--                    <i nz-icon nzType="delete"></i>-->
-              <!--                    {{ bit.l['deleteItem'] }}-->
-              <!--                  </li>-->
-              <!--                </ul>-->
-              <!--              </nz-dropdown-menu>-->
+            <ng-template #deleteRef>
+              <i nz-icon nzType="delete" nz-tooltip="删除"></i>
             </ng-template>
           </nz-card>
         </div>
