--- a/projects/components/media/media.component.scss
+++ b/projects/components/media/media.component.scss
@@ -33,7 +33,7 @@
 //}
 
 .infinite-container {
-  height: 720px;
+  height: 100%;
   width: 100%;
   overflow-x: hidden;
 }
@@ -51,36 +51,6 @@
     transform: translate(-50%, -50%);
   }
 }
-
-//.thumb {
-//  height: 135px;
-//  width: 100%;
-//  background-size: contain;
-//  background-position: 50% 50%;
-//  background-repeat: no-repeat;
-//  overflow: hidden;
-//  position: relative;
-//
-//  .thumb-actions {
-//    pointer-events: none;
-//    position: absolute;
-//    top: 50%;
-//    width: 100%;
-//    height: 32px;
-//    margin-top: -16px;
-//    text-align: center;
-//    z-index: 1;
-//    color: #fff;
-//    font-size: 32px;
-//    opacity: 0;
-//  }
-//
-//  &:hover {
-//    .thumb-actions {
-//      opacity: 0.8;
-//    }
-//  }
-//}
 
 .video,
 .audio {
