--- a/projects/common/src/lib/page-header/page-header.component.html
+++ b/projects/common/src/lib/page-header/page-header.component.html
@@ -40,5 +40,8 @@
         </ng-container>
       </nz-space>
     </nz-page-header-extra>
+    <nz-page-header-content *ngIf="!!wpx.layout.content">
+      <ng-container *ngTemplateOutlet="wpx.layout.content"></ng-container>
+    </nz-page-header-content>
   </nz-page-header>
 </ng-container>
