--- a/projects/resources/src/lib/pictures/pictures.component.html
+++ b/projects/resources/src/lib/pictures/pictures.component.html
@@ -1,5 +1,38 @@
 <wpx-layout wpxTitle="图库">
   <wpx-upload-transport *wpxLayoutAction (wpxChange)="upload($event)"></wpx-upload-transport>
+  <div *wpxLayoutContent>
+    <nz-row nzJustify="space-between">
+      <nz-col>
+        <nz-row [nzGutter]="8">
+          <nz-col>
+            <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+              <i nz-icon nzType="reload"></i>
+            </button>
+          </nz-col>
+          <nz-col>
+            <nz-input-group nzCompact>
+              <input
+                style="width: 420px"
+                type="text"
+                nz-input
+                placeholder="请输入搜索关键词"
+                [(ngModel)]="searchText"
+                (keyup.enter)="getData(true)"
+              />
+              <button nz-button (click)="getData(true)"><i nz-icon nzType="search"></i></button>
+            </nz-input-group>
+          </nz-col>
+          <nz-col>
+            <button nz-button nzType="dashed" (click)="clearSearch()"> <i nz-icon nzType="clear"></i> 清除搜索 </button>
+          </nz-col>
+        </nz-row>
+      </nz-col>
+      <nz-col> </nz-col>
+      <nz-col>
+        <a nz-button nzType="link" disabled>高级搜索</a>
+      </nz-col>
+    </nz-row>
+  </div>
 </wpx-layout>
 
 <wpx-media #mediaRef type="picture" fallback="/loading"></wpx-media>
