--- a/projects/components/table/table.component.html
+++ b/projects/components/table/table.component.html
@@ -196,14 +196,13 @@
           (nzResizeEnd)="resize($event, x.value)"
           [nzWidth]="columnsWidth[x.value] ?? '300px'"
           [nzShowSort]="!columnsWidthVisible"
-          [(nzSortOrder)]="ds.where![x.value]"
+          [(nzSortOrder)]="ds.sort[x.value]"
           (nzSortOrderChange)="getData(true)"
         >
           {{ x.label }}
           <ng-container *ngIf="keywords.has(x.value)">
             <i nz-icon nzType="tag" nz-tooltip="关键词"></i>
           </ng-container>
-
           <nz-resize-handle nzDirection="right" *ngIf="columnsWidthVisible">
             <div class="resize-trigger"></div>
           </nz-resize-handle>
