--- a/projects/resources/src/lib/pictures/pictures.component.html
+++ b/projects/resources/src/lib/pictures/pictures.component.html
@@ -5,11 +5,6 @@
       <nz-col>
         <nz-row [nzGutter]="8">
           <nz-col>
-            <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
-              <i nz-icon nzType="reload"></i>
-            </button>
-          </nz-col>
-          <nz-col>
             <nz-input-group nzCompact>
               <input
                 style="width: 420px"
@@ -23,13 +18,24 @@
             </nz-input-group>
           </nz-col>
           <nz-col>
-            <button nz-button nzType="dashed" (click)="clearSearch()"> <i nz-icon nzType="clear"></i> 清除搜索 </button>
+            <a nz-button nzType="link" disabled>高级搜索</a>
           </nz-col>
         </nz-row>
       </nz-col>
       <nz-col> </nz-col>
       <nz-col>
-        <a nz-button nzType="link" disabled>高级搜索</a>
+        <nz-row [nzGutter]="8">
+          <nz-col>
+            <nz-button-group>
+              <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+                <i nz-icon nzType="reload"></i>
+              </button>
+              <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
+                <i nz-icon nzType="clear"></i>
+              </button>
+            </nz-button-group>
+          </nz-col>
+        </nz-row>
       </nz-col>
     </nz-row>
   </div>
