--- a/projects/components/table/table.component.html
+++ b/projects/components/table/table.component.html
@@ -8,22 +8,13 @@
           style="width: 420px"
           type="text"
           nz-input
-          placeholder="请输入关键词"
-          nz-tooltip="多个关键词可使用逗号分隔"
+          placeholder="请输入搜索关键词"
         />
         <button (click)="submitSearch()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
       </nz-input-group>
     </nz-col>
     <nz-col>
-      <nz-button-group>
-        <button nz-button (click)="openSearchForm()">
-          <i nz-icon nzType="filter"></i>
-          筛选
-        </button>
-        <button nz-button (click)="clearSearch()" nz-tooltip="清除筛选">
-          <i nz-icon nzType="clear"></i>
-        </button>
-      </nz-button-group>
+      <a nz-button nzType="link" (click)="openSearchForm()">高级搜索</a>
     </nz-col>
   </nz-row>
   <nz-drawer
@@ -81,32 +72,13 @@
     <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
       <i nz-icon nzType="reload"></i>
     </button>
-    <button
-      nz-button
-      nzType="text"
-      nz-tooltip="密度"
-      nz-popover
-      nzPopoverPlacement="bottomRight"
-      nzPopoverTrigger="click"
-      [nzPopoverTitle]="columnsSizeTitle"
-      [nzPopoverContent]="columnsSizeContent"
-    >
-      <i nz-icon nzType="column-height"></i>
-      <ng-template #columnsSizeTitle>
-        <label nz-checkbox [(ngModel)]="columnsWidthVisible" (ngModelChange)="onResizeMessage()"> 自定义宽度 </label>
-      </ng-template>
-      <ng-template #columnsSizeContent>
-        <nz-radio-group [(ngModel)]="columnsHeight" (ngModelChange)="updateStorage()">
-          <label nz-radio-button nzValue="default">默认</label>
-          <label nz-radio-button nzValue="middle">中等</label>
-          <label nz-radio-button nzValue="small">紧凑</label>
-        </nz-radio-group>
-      </ng-template>
+    <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
+      <i nz-icon nzType="clear"></i>
     </button>
     <button
       nz-button
       nzType="text"
-      nz-tooltip="列设置"
+      nz-tooltip="设置"
       nz-popover
       nzPopoverPlacement="bottomRight"
       nzPopoverTrigger="click"
@@ -117,7 +89,24 @@
       <ng-template #columnsTitle>
         <nz-row nzJustify="space-between">
           <nz-col>
+            <label nz-checkbox [(ngModel)]="columnsWidthVisible" (ngModelChange)="onResizeMessage()">
+              自定义宽度
+            </label>
+          </nz-col>
+          <nz-col></nz-col>
+          <nz-col> </nz-col>
+        </nz-row>
+      </ng-template>
+      <ng-template #columnsContent>
+        <nz-checkbox-wrapper (nzOnChange)="updateColumnChecked()">
+          <nz-space nzDirection="vertical">
+            <nz-radio-group *nzSpaceItem nzSize="small" [(ngModel)]="columnsHeight" (ngModelChange)="updateStorage()">
+              <label nz-radio-button nzValue="default">默认</label>
+              <label nz-radio-button nzValue="middle">中等</label>
+              <label nz-radio-button nzValue="small">紧凑</label>
+            </nz-radio-group>
             <label
+              *nzSpaceItem
               nz-checkbox
               [(ngModel)]="columnsChecked"
               (ngModelChange)="updateColumnsChecked()"
@@ -125,16 +114,6 @@
             >
               全部展示
             </label>
-          </nz-col>
-          <nz-col></nz-col>
-          <nz-col>
-            <button nzSize="small" nz-button nzType="text" (click)="columnsReset()">重置</button>
-          </nz-col>
-        </nz-row>
-      </ng-template>
-      <ng-template #columnsContent>
-        <nz-checkbox-wrapper (nzOnChange)="updateColumnChecked()">
-          <nz-space nzDirection="vertical">
             <ng-container *ngFor="let column of columns">
               <label *nzSpaceItem nz-checkbox [nzValue]="column.value" [(ngModel)]="column.checked">
                 {{ column.label }}
