--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,16 +6,16 @@
   height: 100%;
 }
 
-.content {
+.container {
   padding-top: 64px;
 }
 
-nz-sider {
+.sider {
   overflow: auto;
   height: 100%;
   border-right: 1px solid #f0f0f0;
 }
 
-nz-content {
+.content {
   padding: 12px;
 }
