--- a/projects/settings/src/lib/pages/pages.component.html
+++ b/projects/settings/src/lib/pages/pages.component.html
@@ -1,75 +1,75 @@
-<wpx-layout wpxTitle="页面管理">
+<wpx-layout wpxTitle="页面管理" [wpxNoPadding]="true">
   <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增" (click)="form()">
     <i nz-icon nzType="plus"></i>
   </button>
 </wpx-layout>
 
-<ng-template #title>
-  <nz-space>
-    <nz-input-group *nzSpaceItem nzSuffixIcon="search">
-      <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
-    </nz-input-group>
-    <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
-        <i nz-icon nzType="reload"></i>
-      </button>
-      <button nz-button nzType="text" [nz-tooltip]="expand ? '全部收起' : '全部展开'" (click)="expanded()">
-        <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
-      </button>
-    </nz-button-group>
-  </nz-space>
-</ng-template>
-
-<nz-row [nzGutter]="16">
-  <nz-col [nzXl]="5" [nzLg]="6">
-    <nz-card [nzTitle]="title">
-      <nz-tree
-        #tree
-        nzBlockNode
-        nzExpandAll
-        nzDraggable
-        nzShowLine
-        nzShowIcon
-        [nzData]="nodes"
-        [nzSearchValue]="name"
-        [nzExpandedIcon]="nzExpandedIcon"
-        [nzSelectedKeys]="selectedKeys"
-        (nzClick)="selected($event)"
-        (nzContextMenu)="actions($event, treeActions)"
-        (nzOnDrop)="drop($event)"
-      >
-        <ng-template #nzExpandedIcon let-node>
-          <ng-container *ngIf="data?.[node.key] as page">
-            <ng-container [ngSwitch]="page.kind">
-              <ng-container *ngSwitchCase="'form'">
-                <i nz-icon nzType="form"></i>
-              </ng-container>
-              <ng-container *ngSwitchCase="'dashboard'">
-                <i nz-icon nzType="dashboard"></i>
-              </ng-container>
-              <ng-container *ngSwitchCase="'group'">
-                <i nz-icon [nzType]="node.isExpanded ? 'ungroup' : 'group'"></i>
-              </ng-container>
-              <ng-container *ngSwitchDefault>
-                <i nz-icon nzType="database"></i>
-              </ng-container>
+<nz-layout class="pages-container">
+  <nz-sider class="pages-sider" nzTheme="light" [nzWidth]="300">
+    <nz-space>
+      <nz-input-group *nzSpaceItem nzSuffixIcon="search">
+        <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
+      </nz-input-group>
+      <nz-button-group *nzSpaceItem>
+        <button nz-button nzType="text" [nz-tooltip]="expand ? '全部收起' : '全部展开'" (click)="expanded()">
+          <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
+        </button>
+        <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+          <i nz-icon nzType="reload"></i>
+        </button>
+      </nz-button-group>
+    </nz-space>
+    <nz-divider></nz-divider>
+    <nz-tree
+      #tree
+      nzBlockNode
+      nzExpandAll
+      nzDraggable
+      nzShowLine
+      [nzData]="nodes"
+      [nzSearchValue]="name"
+      [nzExpandedIcon]="nzExpandedIcon"
+      [nzSelectedKeys]="selectedKeys"
+      (nzClick)="selected($event)"
+      (nzContextMenu)="actions($event, treeActions)"
+      (nzOnDrop)="drop($event)"
+    >
+      <ng-template #nzExpandedIcon let-node>
+        <ng-container *ngIf="data?.[node.key] as page">
+          <ng-container [ngSwitch]="page.kind">
+            <ng-container *ngSwitchCase="'form'">
+              <i nz-icon nzType="form"></i>
+            </ng-container>
+            <ng-container *ngSwitchCase="'dashboard'">
+              <i nz-icon nzType="dashboard"></i>
+            </ng-container>
+            <ng-container *ngSwitchCase="'group'">
+              <i nz-icon [nzType]="!node.isExpanded ? 'folder' : 'folder-open'"></i>
+            </ng-container>
+            <ng-container *ngSwitchDefault>
+              <i nz-icon nzType="database"></i>
             </ng-container>
           </ng-container>
-        </ng-template>
-        <nz-dropdown-menu #treeActions="nzDropdownMenu">
-          <ul *ngIf="actionKey" nz-menu>
-            <ng-container *ngIf="data?.[actionKey] as page">
-              <li nz-menu-item [nzSelected]="false">{{ page.name }}</li>
-              <li nz-menu-divider></li>
-              <li nz-menu-item (click)="form(page)"> 编辑 </li>
-              <li nz-menu-item nzDanger (click)="delete(page)"> 删除 </li>
-            </ng-container>
-          </ul>
-        </nz-dropdown-menu>
-      </nz-tree>
-    </nz-card>
-  </nz-col>
-  <nz-col [nzXl]="19" [nzLg]="18">
-    <router-outlet></router-outlet>
-  </nz-col>
-</nz-row>
+        </ng-container>
+      </ng-template>
+      <nz-dropdown-menu #treeActions="nzDropdownMenu">
+        <ul *ngIf="actionKey" nz-menu>
+          <ng-container *ngIf="data?.[actionKey] as page">
+            <li nz-menu-item [nzSelected]="false">
+              <i *ngIf="page.icon" nz-icon [nzType]="page.icon"></i>
+              <span>{{ page.name }}</span>
+            </li>
+            <li nz-menu-divider></li>
+            <li nz-menu-item (click)="form(page)"> 编辑 </li>
+            <li nz-menu-item nzDanger (click)="delete(page)"> 删除 </li>
+          </ng-container>
+        </ul>
+      </nz-dropdown-menu>
+    </nz-tree>
+  </nz-sider>
+  <nz-layout style="overflow: auto">
+    <nz-content class="pages-content">
+      <router-outlet></router-outlet>
+    </nz-content>
+  </nz-layout>
+</nz-layout>
