--- a/projects/settings/src/lib/roles/roles.component.html
+++ b/projects/settings/src/lib/roles/roles.component.html
@@ -2,27 +2,35 @@
   <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增" (click)="form()">
     <i nz-icon nzType="plus"></i>
   </button>
+  <nz-row *wpxLayoutContent nzJustify="space-between">
+    <nz-col>
+      <nz-input-group nzCompact>
+        <input
+          style="width: 420px"
+          type="text"
+          nz-input
+          placeholder="请输入搜索关键词"
+          [(ngModel)]="searchText"
+          (keyup.enter)="getData()"
+        />
+        <button nz-button (click)="getData()"><i nz-icon nzType="search"></i></button>
+      </nz-input-group>
+    </nz-col>
+    <nz-col></nz-col>
+    <nz-col>
+      <nz-button-group>
+        <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+          <i nz-icon nzType="reload"></i>
+        </button>
+        <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
+          <i nz-icon nzType="clear"></i>
+        </button>
+      </nz-button-group>
+    </nz-col>
+  </nz-row>
 </wpx-layout>
 
-<ng-template #searchTextInput>
-  <nz-input-group nzCompact>
-    <input
-      style="width: 420px"
-      type="text"
-      nz-input
-      placeholder="请输入搜索关键词"
-      [(ngModel)]="searchText"
-      (keyup.enter)="getData()"
-    />
-    <button nz-button (click)="getData()"><i nz-icon nzType="search"></i></button>
-  </nz-input-group>
-</ng-template>
-
-<ng-template #searchExtra>
-  <button nz-button nzType="dashed" (click)="clearSearch()"><i nz-icon nzType="clear"></i> 清除筛选</button>
-</ng-template>
-
-<nz-card [nzTitle]="searchTextInput" [nzExtra]="searchExtra">
+<nz-card>
   <nz-tag
     nzMode="checkable"
     [nzChecked]="labels.length === matchLabels.size"
